<resources>
    <string name="app_name">Mobile supervisor - nadzorca</string>
    <string name="title_message">Wiadomości</string>
    <string name="title_video">Messenger</string>
    <string name="title_camera">Kamera</string>
    <string name="title_history">Historia</string>
    <string name="title_results">Wyniki</string>
    <string name="login">Zaloguj się w celu korzystania z aplkacji</string>
    <string name="start_typing">Zacznij pisać..</string>
    <string name="receiver_message">Receiver message</string>
    <string name="sender_message">Sender message</string>
    <string name="date">12/12/2019 09:12AM</string>
    <string name="logout">Wyloguj się</string>

    <string name="msg_subscribed">msg_subscribed</string>
    <string name="msg_subscribe_failed">msg_subscribe_failed</string>
</resources>
