<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_results"
        android:icon="@drawable/ic_results"
        android:title="@string/title_results" />


    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_Messenger"
        android:icon="@drawable/ic_video"
        android:title="@string/title_video" />


    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />



</menu>
